--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern-server",
+  "name": "Checkrum: Inspection Tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "Inspection tracker for audio video technologies in conference rooms.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -9,8 +9,8 @@
     "seed": "node seeders/seed.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Drew Hermanson, Charlotte Stowe, Brian Wach",
+  "license": "MITE",
   "dependencies": {
     "@apollo/server": "^4.7.1",
     "bcrypt": "^5.0.0",
