--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "vite": "^5.1.6",
     "tailwindcss": "^3.4.3",
     "postcss": "^8.4.38",
+    "autoprefixer": "10.4.19",
     "daisyui": "^4.11.1"
   }
 }
