--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   },
   "keywords": [],
   "author": "Drew Hermanson, Charlotte Stowe, Brian Wach",
-  "license": "MITE",
+  "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.7.1",
     "bcrypt": "^5.0.0",
