--- a/client/package.json
+++ b/client/package.json
@@ -11,25 +11,27 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
-    "react-hook-form": "^7.51.5"
+    "react-hook-form": "^7.51.5",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "10.4.19",
+    "daisyui": "^4.11.1",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^5.1.6",
-    "tailwindcss": "^3.4.3",
     "postcss": "^8.4.38",
-    "autoprefixer": "10.4.19",
-    "daisyui": "^4.11.1"
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.1.6"
   }
 }
